# aos_core_sm_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  host_build.sh  suppressions.txt
.github/workflows/: build_test.yaml  check_format.yaml  mend_check.yaml
conan/: conanfile.py  libp11conan.py
src/: CMakeLists.txt  main.cpp  version.hpp.in
src/alerts/: CMakeLists.txt  alerts.hpp  journalalerts.cpp  journalalerts.hpp
src/app/: CMakeLists.txt  aoscore.cpp  aoscore.hpp  app.cpp  app.hpp
src/config/: CMakeLists.txt  config.cpp  config.hpp
src/database/: CMakeLists.txt  database.cpp  database.hpp
src/image/: CMakeLists.txt  imagehandler.cpp  imagehandler.hpp
src/launcher/: CMakeLists.txt  runtime.cpp  runtime.hpp
src/logger/: logmodule.hpp
src/logprovider/: CMakeLists.txt  archivator.cpp  archivator.hpp  journal.cpp  journal.hpp  logprovider.cpp  logprovider.hpp
src/monitoring/: CMakeLists.txt  resourceusageprovider.cpp  resourceusageprovider.hpp
src/networkmanager/: CMakeLists.txt  cni.cpp  cni.hpp  exec.cpp  exec.hpp  networkmanager.hpp  trafficmonitor.cpp  trafficmonitor.hpp
src/resourcemanager/: CMakeLists.txt  resourcemanager.cpp  resourcemanager.hpp
src/runner/: CMakeLists.txt  aos-service@.service  runner.cpp  runner.hpp  systemdconn.cpp  systemdconn.hpp
src/smclient/: CMakeLists.txt  config.hpp  smclient.cpp  smclient.hpp
src/utils/: CMakeLists.txt  journal.cpp  journal.hpp
tests/: CMakeLists.txt
tests/alerts/: CMakeLists.txt  alerts_test.cpp
tests/config/: CMakeLists.txt  config_test.cpp
tests/database/: CMakeLists.txt  database_test.cpp
tests/image/: CMakeLists.txt  imagehandler_test.cpp
tests/include/mocks/: alertsmock.hpp  certhandlermock.hpp  certloadermock.hpp  cnimock.hpp  connectionsubscribermock.hpp  iptablesmock.hpp  journalmock.hpp  launchermock.hpp  logprovidermock.hpp  networkmanagermock.hpp  nodeinfoprovidermock.hpp  provisionmanagermock.hpp  resourcemanagermock.hpp  resourcemonitormock.hpp  x509providermock.hpp
tests/integration/: CMakeLists.txt  aos-service@test-crash.service  hello-world.sh  instanceidprovider_mock.hpp  integr_test.cpp
tests/launcher/: CMakeLists.txt  runtime_test.cpp
tests/logprovider/: CMakeLists.txt  JournalMock.hpp  journalstub.hpp  logprovider_test.cpp  logreceivermock.hpp
tests/monitoring/: CMakeLists.txt  resourceusageprovider_test.cpp
tests/networkmanager/: CMakeLists.txt  cni_test.cpp  trafficmonitor_test.cpp
tests/networkmanager/mocks/: storage.hpp
tests/resourcemanager/: CMakeLists.txt  resourcemanager_test.cpp
tests/runner/: CMakeLists.txt  aos-service@.service  hello-world.sh  runner_integr_test.cpp  runner_test.cpp  runstatusreceiver_mock.hpp  systemdconn_mock.hpp
tests/smclient/: CMakeLists.txt  smclient_test.cpp
