#
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET aos_servicemanager)

# ######################################################################################################################
# Defines
# ######################################################################################################################

# ######################################################################################################################
# Includes
# ######################################################################################################################

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

# ######################################################################################################################
# Modules
# ######################################################################################################################

add_subdirectory(app)
add_subdirectory(config)
add_subdirectory(database)
add_subdirectory(image)
add_subdirectory(launcher)
add_subdirectory(networkmanager)
add_subdirectory(resourcemanager)
add_subdirectory(runner)
add_subdirectory(smclient)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES main.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

target_link_libraries(${TARGET} aoscommon app)

# ######################################################################################################################
# Install
# ######################################################################################################################

install(TARGETS ${TARGET} RUNTIME DESTINATION bin)
